--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Open Graph Meta Tags para Facebook y demás -->
   <meta property="og:title" content="Bad Bunny y P Diddy Romance Secreto" />
   <meta property="og:description" content="Una historia de amor lubricada con secretos oscuros, billetes, contratos satánicos, premios y abvsos inf4ntil3s detrás del reggaetón y el autotune." />
-  <meta property="og:image" content="https://i.imgur.com/3NPrKhH.png" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/Amberverly/Diddy-bunny-imagen-y-index/main/IMG_20250604_011102.jpg" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://badbunny-diddy-love-reggaeton-romance.netlify.app/" />
 
@@ -16,8 +16,8 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Bad Bunny y Diddy: Romance Secreto" />
   <meta name="twitter:description" content="Una historia de amor lubricada con secretos oscuros, billetes, contratos satánicos, premios y abvsos inf4ntil3s detrás del reggaetón y el autotune." />
-  <meta name="twitter:image" content="https://i.imgur.com/3NPrKhH.png" />
-
+  
+<meta property="og:image" content="https://raw.githubusercontent.com/Amberverly/Diddy-bunny-imagen-y-index/main/IMG_20250604_011102.jpg" />
   <style>
     body {
       font-family: Arial, sans-serif;
